arreglo blog y testimonios

--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
             </section>
             <p class="sectionTitle centerText">Testimonios <span>Reales</span></p>
             <p class="p18px centerText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed<br>diam nonummy nibh euismod tincidunt.</p>
-            <section class="flexContainer">
-                <div class="div220px">
-                    <img src="assets/coach-de-vida.png" alt="coach-de-vida" width="200px">
+            <section class="flexContainer width">
+                <div class="div300px">
+                    <img src="assets/coach-de-vida.png" alt="coach-de-vida" width="300px">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
                 </div>
-                <div class="div220px">
-                    <img src="assets/coach-de-emprendedores.png" alt="coach-de-emprendedores" width="200px">
+                <div class="div300px">
+                    <img src="assets/coach-de-emprendedores.png" alt="coach-de-emprendedores" width="300px">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
                 </div>
-                <div class="div220px">
-                    <img src="assets/coach-de-salud.png" alt="coach-de-salud" width="200px">
+                <div class="div300px">
+                    <img src="assets/coach-de-salud.png" alt="coach-de-salud" width="300px">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
             </section>
