--- a/index.html
+++ b/index.html
@@ -108,13 +108,42 @@
                 <p class="p18px centerText">Contamos con los mejores talentos certificados que darán soluciones<br>a problemáticas de diferentes categorías. ¿Cuál es la tuya?</p>
                 <!--Carrousel estático-->
                 <div class="flexContainer">
-                    <i class="fas fa-chevron-left fa-3x greyColor" id="noIcon"></i>
-                    <img src="assets/4.png" alt="coaches" height="150px" class="carrousel">
-                    <img src="assets/5.png" alt="coaches" height="150px" class="carrousel">
-                    <img src="assets/6.png" alt="coaches" height="150px" class="carrousel">
-                    <img src="assets/7.png" alt="coaches" height="150px" class="carrousel">
-                    <img src="assets/8.png" alt="coaches" height="150px" class="carrousel">
-                    <i class="fas fa-chevron-right fa-3x greyColor" id="noIcon"></i>
+                    <button role="button" id="left-arrow"><i class="fas fa-chevron-left fa-3x greyColor" id="noIcon"></i></button> 
+                    <div class="contenedor-carrousel">
+                    <!--<div class="carrousel">-->
+                        <div class="img">
+                            <img src="assets/4.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/5.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/6.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/7.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/8.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/4.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/5.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/6.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/7.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <div class="img">
+                            <img src="assets/8.png" alt="coaches" height="150px" class="carrousel-img coach">
+                        </div>
+                        <!--</div>-->
+                    </div>
+                    <button role="button" id="right-arrow"><i class="fas fa-chevron-right fa-3x greyColor" id="noIcon"></i></button>
                 </div>
             </section>
             <p class="sectionTitle centerText">Testimonios <span>Reales</span></p>
