--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
             </section>
             <p class="sectionTitle centerText">Testimonios <span>Reales</span></p>
             <p class="p18px centerText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed<br>diam nonummy nibh euismod tincidunt.</p>
-            <section class="flexContainer width">
+            <section class="flexContainer4 width">
                 <div class="div300px">
-                    <img src="assets/coach-de-vida.png" alt="coach-de-vida" width="300px">
+                    <img src="assets/coach-de-vida.png" alt="coach-de-vida" class="testimonios-img">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
                 </div>
                 <div class="div300px">
-                    <img src="assets/coach-de-emprendedores.png" alt="coach-de-emprendedores" width="300px">
+                    <img src="assets/coach-de-emprendedores.png" alt="coach-de-emprendedores" class="testimonios-img">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
                 </div>
                 <div class="div300px">
-                    <img src="assets/coach-de-salud.png" alt="coach-de-salud" width="300px">
+                    <img src="assets/coach-de-salud.png" alt="coach-de-salud" class="testimonios-img">
                     <h5 class="centerText p18px">Nombre y Apellido</h5>
                     <p class="centerText p14px">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut.</p>
             </section>
@@ -214,7 +214,7 @@
                         <li class="margin-right35"><a href="#" id="aFooter">Servicios</a></li>
                         <li class="margin-right24"><a href="#" id="aFooter">Blog</a></li>
                         <li class="margin-right10"><a href="#" id="aFooter">Términos y condiciones</a></li>
-                        <li class="margin-left"><a href="https://github.com/noecor" id="aFooter"> Sitio creado por @noecor</a></li>
+                        <li class="margin-left"><a href="https://github.com/noecor" id="aFooter"> Sitio desarrollado por @noecor</a></li>
                     </ul>
                 </div>
             </div>
