--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- HEADER -->
         <header>
             <nav>
-                <a href="index.html"><img src="assets/svg-logo-header.svg" class="logo"/></a>
+                <a href="index.html" class="logo-mobile"><img src="assets/svg-logo-header.svg" class="logo"/></a>
                 <ul class="menu">
                     <li class="menuItem"><a href="#" id="menuItem">BÚSQUEDA</a></li>
                     <li class="menuItem"><a href="#" id="menuItem">REGISTRARSE <i id="noIcon" class="fas fa-caret-down"></i></a></li>
@@ -31,7 +31,7 @@
             <div class="header">
                 <h1 class="centerText"><span>La plataforma número 1 </span>en <br><span>unir</span> a los <span>mejores coachs certificados</span><br> con sus <span>clientes.</span></h1>
                 <p class="centerText subtitle">BUSCA TU COACH </p>
-                <form class="centerText">
+                <form class="centerText" id="form">
                     <select name="category">
                         <option value="category">Categoria</option>
                     </select>
@@ -214,7 +214,7 @@
                         <li class="margin-right35"><a href="#" id="aFooter">Servicios</a></li>
                         <li class="margin-right24"><a href="#" id="aFooter">Blog</a></li>
                         <li class="margin-right10"><a href="#" id="aFooter">Términos y condiciones</a></li>
-                        <li class="margin-left"><a href="https://github.com/noecor" id="aFooter"> Sitio desarrollado por @noecor</a></li>
+                        <!--<li class="margin-left"><a href="https://github.com/noecor" id="aFooter"> Sitio desarrollado por @noecor</a></li>-->
                     </ul>
                 </div>
             </div>
